Resolve a tags wrap line

--- a/public/css/markdown.css
+++ b/public/css/markdown.css
@@ -24,7 +24,7 @@ code {
 
 blockquote {
   border-left: 0.3rem solid rgba(50, 48, 91, 0.759);
-  padding-inline-start: 0.8rem;
+  padding-inline-start: 0.25rem;
   margin-inline: 1rem;
   padding-block: 0.3rem;
   background-color: rgba(25, 24, 48, 0.1);
